[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "overlay-benchmark"
version = "0.0.1"
dependencies = [
  "locust (>=2.43.0,<3.0.0)"
]
requires-python = ">=3.10"
authors = [
  {name = "Gabor Stenzinger", email = "gabor.stenzinger@gmail.com"}
]
maintainers = [
  {name = "Gabor Stenzinger", email = "gabor.stenzinger@gmail.com"}
]
description = "Benchmarking tool for the overlay POC"
license = "GNU v3"
license-files = ["LICEN[CS]E.*"]
